[package]
name = "moos-parser-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lalrpop-util = {version = "0.19.6", features = ["lexer"]}


[build-dependencies]
lalrpop = {version = "0.19.6", features = ["lexer"]}

